# open5gs

lib/: meson.build
lib/core/: ogs-hash.c  ogs-hash.h
lib/libbloom/: bloom.c  bloom.h  meson.build  version.h
src/amf/: gmm-handler.c
src/udm/: context.c  context.h  meson.build  nudm-handler.c  nudm-handler.h
